--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <span class="say">Hiiii sweetie 💞</span><br>
-                    <span class="say">Happy Birthday </span><br>
-                    <span class="say">May God bless you </span><br>
-                    <span class="say">And give u many happiness 💕</span><br>
-                    <span class="say">Just saying...ur pretty awesome ❤️</span><br>
-                    <span class="say">Sending good vibes and maybe a wink 😏</span><br>
-                    <span class="say">Hope u have a great day today ❤️😘</span><br>
-                    
+                    <span class="say">Hiiii sweetie </span><br>
+                    <span class="say">Happy Birthday 🌸</span><br>
+                    <span class="say">I just wanted to say that knowing u has been something truly special.</span><br>
+                    <span class="say">u have a way of bringing calm, light, and sincerity wherever u are.</span><br>
+                    <span class="say">I admire ur heart, ur mind, and the quiet strength u carry.</span><br>
+                    <span class="say">Today, I hope you feel appreciated in ways words cant fully express.</span><br>
+                    <span class="say">May this year bring u peace, smiles, and moments that feel like home.</span><br>
+                    <span class="say">Im genuinely grateful for u and I wish you the most beautiful day.</span><br>
                 </div>
             </div>
             <div id="clock-box">
@@ -181,4 +181,5 @@
     })();
     </script>
 </body>
+
 </html>
