--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>HBD love</title>	    
+    <title>HBD FATOMA</title>	    
     <link type="text/css" rel="stylesheet" href="file/default.css">
     <script type="text/javascript" src="file/jquery.min.js"></script>
     <script type="text/javascript" src="file/jscex.min.js"></script>
@@ -38,6 +38,8 @@
                     <span class="say">Today, I hope you feel appreciated in ways words cant fully express.</span><br>
                     <span class="say">May this year bring u peace, smiles, and moments that feel like home.</span><br>
                     <span class="say">Im genuinely grateful for u and I wish you the most beautiful day.</span><br>
+					<span class="say">with all my love. </span><br>
+					<span class="say">Mohamed ouali alami</span><br>
                 </div>
             </div>
             <div id="clock-box">
@@ -183,3 +185,4 @@
 </body>
 
 </html>
+
